# apis-biographien-theme

./: .gitignore  pyproject.toml
theme/: urls.py  utils.py
theme/static/theme/scss/fundament_oebl/: assets.css.map  style.css  style.css.map
theme/templates/theme/: base.html  person_detail.html  random_entries.html  stats.html
